--- a/index.html
+++ b/index.html
@@ -4,37 +4,45 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.9.2/d3.js"></script>
 		<script src="main.js" type="text/javascript"></script>
 		<style>
-			.chart div {
-				padding: 4px;
-				margin: 2px;
-				color: white;
-				min-width: 32px;
-				min-height: 18px;
-				background: cornflowerblue;
-				margin-left: 240px;
-			}
-			.chart div:before {
-				content: attr(data-column);
-				color: black;
-				display: block;
-				position: absolute;
-				width: 240px;
-				left: 0px;
-				text-align: right;
-			}
-
-			.chart rect {
+			.chart rect.bar-block {
 				fill: cornflowerblue;
+				transition: fill 0.2s;
+				cursor: pointer;
+			}
+			.chart rect.bar-block:hover {
+				fill: darkcyan;
 			}
 
-			.chart text {
+			select.dates {
+		    background: white;
+		    margin: 10px 0px;
+		    outline: none;
+		    padding: 10px;
+		    font-size: 16px;
+		    letter-spacing: 2px;
+		    color: cornflowerblue;
+		    font-family: monospace;
+		    font-weight: bold;
+			}
+
+
+			.chart text.bar-value {
 				fill: white;
 				font: 10px sans-serif;
 				text-anchor: end;
 			}
+
+			.chart text.bar-name {
+				text-anchor: start;
+				font: 10px sans-serif;
+				fill: black;
+			}
 		</style>
 	</head>
 	<body>
+		<div class="form">
+			<select name="" id="" class="dates"></select>
+		</div>
 		<svg class="chart" width="420" height="120">			
 		</svg>
 	</body>
