--- a/index.html
+++ b/index.html
@@ -1,19 +1,17 @@
 <html>
 	<head>
-		<script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.9.2/d3.js"></script>
-		<script src="main.js" type="text/javascript"></script>
 		<style>
 			.chart rect.bar-block {
-				fill: cornflowerblue;
+				/*fill: cornflowerblue;*/
 				transition: fill 0.2s;
 				cursor: pointer;
 			}
 			.chart rect.bar-block:hover {
-				fill: darkcyan;
+				/*fill: darkcyan;*/
 			}
 
-			select.dates {
+			select {
 		    background: white;
 		    margin: 10px 0px;
 		    outline: none;
@@ -41,9 +39,100 @@
 	</head>
 	<body>
 		<div class="form">
+			<select name="" id="" class="years">
+				<option value="2018">2018</option>
+				<option value="2017">2017</option>
+				<option value="2016">2016</option>
+				<option value="2015">2015</option>
+				<option value="2014">2014</option>
+				<option value="2013">2013</option>
+				<option value="2012">2012</option>
+				<option value="2011">2011</option>
+				<option value="2010">2010</option>
+				<option value="2009">2009</option>
+			</select>
 			<select name="" id="" class="dates"></select>
 		</div>
 		<svg class="chart" width="420" height="120">			
 		</svg>
+		<script type="text/javascript">
+			var LOCATIONS = "http://donnees.ville.montreal.qc.ca/dataset/f170fecc-18db-44bc-b4fe-5b0b6d2c7297/resource/c7d0546a-a218-479e-bc9f-ce8f13ca972c/download/localisationcompteursvelo2015.csv";
+			var YEARS = {
+				2018: "http://donnees.ville.montreal.qc.ca/dataset/f170fecc-18db-44bc-b4fe-5b0b6d2c7297/resource/eea2434f-32b3-4dc5-9035-f1642509f0e7/download/comptage_velo_2018.csv",
+				2017: "http://donnees.ville.montreal.qc.ca/dataset/f170fecc-18db-44bc-b4fe-5b0b6d2c7297/resource/83063700-8fe7-4e6f-8c4b-ed55f4602514/download/comptagevelo2017.csv",
+				2016: "http://donnees.ville.montreal.qc.ca/dataset/f170fecc-18db-44bc-b4fe-5b0b6d2c7297/resource/6caecdd0-e5ac-48c1-a0cc-5b537936d5f6/download/comptagevelo20162.csv",
+				2015: "http://donnees.ville.montreal.qc.ca/dataset/f170fecc-18db-44bc-b4fe-5b0b6d2c7297/resource/64c26fd3-0bdf-45f8-92c6-715a9c852a7b/download/comptagevelo20152.csv",
+				2014: "http://donnees.ville.montreal.qc.ca/dataset/f170fecc-18db-44bc-b4fe-5b0b6d2c7297/resource/868b4bc8-ff55-4c48-ab3b-d80615445595/download/comptagevelo2014.csv",
+				2013: "http://donnees.ville.montreal.qc.ca/dataset/f170fecc-18db-44bc-b4fe-5b0b6d2c7297/resource/ec12447d-6b2a-45d0-b0e7-fd69c382e368/download/comptagevelo2013.csv",
+				2012: "http://donnees.ville.montreal.qc.ca/dataset/f170fecc-18db-44bc-b4fe-5b0b6d2c7297/resource/d54cec49-349e-47af-b152-7740056d7311/download/comptagevelo2012.csv",
+				2011: "http://donnees.ville.montreal.qc.ca/dataset/f170fecc-18db-44bc-b4fe-5b0b6d2c7297/resource/f2e43419-ebb2-4e38-80b6-0644c8344338/download/comptagevelo2011.csv",
+				2010: "http://donnees.ville.montreal.qc.ca/dataset/f170fecc-18db-44bc-b4fe-5b0b6d2c7297/resource/f23e1c88-cd04-467f-a64a-48f5eb1b6c9e/download/comptagevelo2010.csv",
+				2009: "http://donnees.ville.montreal.qc.ca/dataset/f170fecc-18db-44bc-b4fe-5b0b6d2c7297/resource/ee1e9541-939d-429e-919a-8ab94527773c/download/comptagevelo2009.csv"
+			}
+			var WIDTH = 420, BARHEIGHT = 20, BARWIDTH = 20;
+
+			var data;
+			var bars;
+			var header;
+
+			function update( index ) {
+				var colorize = d3.scaleLinear().domain([ 0, d3.max( data[index].data )]).range( ["purple", "gold"] );
+				var x = d3.scaleLinear().domain([ 0, d3.max( data[index].data ) ]).range([ 0, WIDTH ]);		
+				bars.data( data[index].data );
+
+				bars.select("rect.bar-block").transition().attr("width", d => Math.max(BARWIDTH, x(d)) ).attr("height", BARHEIGHT - 1).attr("fill", colorize);
+				bars.select("text.bar-value").transition().attr("x", d => Math.max(x(d), BARWIDTH) - 3 ).attr("y", BARHEIGHT / 2).attr("dy", "0.35em").text( d => d );
+				bars.select("text.bar-name").transition().attr("x", d => Math.max(x(d), BARWIDTH) + 3 ).attr("y", BARHEIGHT / 2).attr("dy", "0.35em").text( ( d, i ) => header[i] );
+			}
+
+		  d3.select('.years').on('change', function () {
+		  	var year = parseInt( d3.select(this).property('value') ) || 2018;
+		  	load( year );
+		  });
+
+		  function load ( year ) {
+		  	console.log('starting load for ' + year + ' > ' + YEARS[year] );
+				d3.csv( YEARS[year] ).then( raw => {
+					console.log('loading complete (' + year + ')');
+					header = [];
+					for ( key in raw[0] ) {
+						header.push( key );
+					}
+					header = header.slice( 2 );
+
+					data = [];
+					for ( var i = 0; i < raw.length; i++ ) {
+						var row = [];
+						for ( var k = 0; k < header.length; k++ ) {
+							row.push( +raw[i][header[k]] );
+						}
+						data.push( { date: raw[i].Date, data: row } );
+					}
+
+					var dates = d3.select(".dates").selectAll("option").remove().exit().data( data.map( d => d.date ) ).enter().append("option").attr("value", (d, i) => i).text( d => d);
+
+					d3.select('.dates')
+					  .on('change', function() {
+					    var index = parseInt(d3.select(this).property('value')) || 0;
+					    update( index );
+					});
+
+					var x = d3.scaleLinear().domain([ 0, d3.max( data[0].data ) ]).range([ 0, WIDTH ]);		
+
+					bars = d3.select(".chart").attr( "width", WIDTH + 240 ).attr( "height", BARHEIGHT * data[0].data.length )
+						.selectAll("g").remove().exit()
+						.data( data[0].data )
+						.enter().append("g").attr( "transform", ( d, i ) => "translate(0, " + i * BARHEIGHT + ")" );
+
+					bars.append("rect").attr("class", "bar-block");
+					bars.append("text").attr("class", "bar-value");
+					bars.append("text").attr("class", "bar-name");
+
+					update( 0 );
+				});
+			}
+
+			load( 2018 );
+		</script>
 	</body>
 </html>
